# constraints

./: .gitignore  .travis.yml  CHANGELOG.markdown  LICENSE  Liskov.hs  README.markdown  cabal.haskell-ci  constraints.cabal
.github/workflows/: haskell-ci.yml
Data/: Constraint.hs  Families.hs
Data/Constraint/: Families.hs  Forall.hs  Lifting.hs  Unsafe.hs
src/Data/: Constraint.hs
src/Data/Constraint/: Char.hs  Compose.hs  Deferrable.hs  Forall.hs  Lifting.hs  Nat.hs  Symbol.hs  TH.hs  TypeLits.hs  Unsafe.hs
tests/: GH117Spec.hs  GH55Spec.hs
