name:          constraints
category:      Constraints
version:       0.4.1.3
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/constraints/
bug-reports:   http://github.com/ekmett/constraints/issues
copyright:     Copyright (C) 2011-2014 Edward A. Kmett
synopsis:      Constraint manipulation
description:
  GHC 7.4 gave us the ability to talk about @ConstraintKinds@. They stopped crashing the compiler in GHC 7.6.
  .
  This package provides a vocabulary for working with them.

build-type:    Simple
tested-with:   GHC == 7.8.3, GHC == 7.7.20131027, GHC == 7.7.20131025, GHC == 7.6.3
extra-source-files: README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/constraints.git

library
  default-language: Haskell2010
  other-extensions:
    FunctionalDependencies,
    ScopedTypeVariables,
    StandaloneDeriving,
    FlexibleInstances,
    FlexibleContexts,
    ConstraintKinds,
    KindSignatures,
    TypeOperators,
    Rank2Types,
    GADTs

  build-depends:
    base >= 4.5 && < 5,
    newtype >= 0.2 && < 0.3,
    ghc-prim
  exposed-modules:
    Data.Constraint
    Data.Constraint.Forall
    Data.Constraint.Unsafe

  ghc-options: -Wall
