name:          constraints
category:      Constraints
version:       0.6
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/constraints/
bug-reports:   http://github.com/ekmett/constraints/issues
copyright:     Copyright (C) 2011-2015 Edward A. Kmett
synopsis:      Constraint manipulation
description:
  GHC 7.4 gave us the ability to talk about @ConstraintKinds@. They stopped crashing the compiler in GHC 7.6.
  .
  This package provides a vocabulary for working with them.

build-type:    Simple
tested-with:   GHC == 7.8.3, GHC == 7.7.20131027, GHC == 7.7.20131025
extra-source-files: README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/constraints.git

library
  hs-source-dirs: src

  default-language: Haskell2010
  other-extensions:
    FunctionalDependencies,
    ScopedTypeVariables,
    StandaloneDeriving,
    FlexibleInstances,
    FlexibleContexts,
    ConstraintKinds,
    KindSignatures,
    TypeOperators,
    Rank2Types,
    GADTs

  build-depends:
    base >= 4.6 && < 5,
    binary >= 0.7.3 && < 0.8,
    deepseq >= 1.3 && < 1.5,
    ghc-prim,
    hashable >= 1.2 && < 1.3,
    mtl >= 2 && < 2.3,
    transformers >= 0.2 && < 0.5,
    transformers-compat >= 0.4 && < 1

  if impl(ghc < 7.8)
    build-depends:
      newtype >= 0.2 && < 0.3,
      tagged >= 0.2 && < 1
  else
    exposed-modules:
      Data.Constraint.Forall

  exposed-modules:
    Data.Constraint
    Data.Constraint.Deferrable
    Data.Constraint.Lifting
    Data.Constraint.Unsafe

  ghc-options: -Wall
