cabal-version: 2.4
name:          constraints
category:      Constraints
version:       0.14
license:       BSD-2-Clause
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/constraints/
bug-reports:   http://github.com/ekmett/constraints/issues
copyright:     Copyright (C) 2011-2021 Edward A. Kmett
synopsis:      Constraint manipulation
description:
  GHC 7.4 gave us the ability to talk about @ConstraintKinds@. They stopped crashing the compiler in GHC 7.6.
  .
  This package provides a vocabulary for working with them.

build-type:    Simple
tested-with:   GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.4
             , GHC == 9.0.1
extra-source-files: README.markdown
                  , CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/constraints.git

library
  hs-source-dirs: src

  default-language: Haskell2010
  other-extensions:
    FunctionalDependencies,
    ScopedTypeVariables,
    StandaloneDeriving,
    FlexibleInstances,
    FlexibleContexts,
    ConstraintKinds,
    KindSignatures,
    TypeOperators,
    Rank2Types,
    GADTs

  build-depends:
    , base >= 4.12 && < 5
    , binary >= 0.7.1 && < 0.9
    , boring >= 0.2 && <0.3
    , deepseq >= 1.3 && < 1.5
    , ghc-prim
    , hashable >= 1.2 && < 1.5
    , mtl ^>= 2.2
    , transformers ^>= 0.5
    , type-equality >= 1 && < 2

  exposed-modules:
    Data.Constraint
    Data.Constraint.Deferrable
    Data.Constraint.Forall
    Data.Constraint.Lifting
    Data.Constraint.Nat
    Data.Constraint.Symbol
    Data.Constraint.Unsafe

  ghc-options: -Wall -Wno-star-is-type

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: Spec.hs
  other-modules: GH55Spec
  ghc-options: -Wall -threaded -rtsopts
  build-tool-depends: hspec-discover:hspec-discover >= 2
  build-depends:
    base >= 4.7 && < 5,
    constraints,
    hspec >= 2
